SERVER-37134 initialize _pipe and _port